# JediEngine

./: .gitmodules  CMakeLists.txt
Core/: CMakeLists.txt
Core/include/Core/: Application.h  Event.h  Log.h  ResourceManager.h
Core/include/Core/Utils/: test.h
Core/include/Rendering/: Camera.h  GameObject.h  GraphicsScene.h  GuiManager.h  ShaderProgram.h  Sprite.h  Texture2D.h
Core/src/Core/: Application.cpp  ResourceManager.cpp  Window.cpp  Window.h
Core/src/Core/Utils/: test.cpp
Core/src/Rendering/: Camera.cpp  GameObject.cpp  GraphicsScene.cpp  GuiManager.cpp  ShaderProgram.cpp  Sprite.cpp  Texture2D.cpp
Editor/: CMakeLists.txt
Editor/res/shaders/: cube.frag  cube.vert  sprite.frag  sprite.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
Editor/src/: main.cpp
